<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_background"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/addAmStaticTextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/add_amount"
                android:textColor="@color/black_dark"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/waCrossImage"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/baseline_close_24"
                android:textColor="@color/black" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/slot_background"
            android:orientation="vertical">


            <EditText
                android:id="@+id/amountWithdrawEditD"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/enter_amount"
                android:inputType="number"
                android:padding="6dp"
                android:textSize="15dp" />


        </LinearLayout>


        <Button
            android:id="@+id/submit_WithDrawBtn"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_background_color"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16" />

    </LinearLayout>

</LinearLayout>